@@ -1,3 +1,7 @@
+2004-04-28  Pawel Rozanski  <tokugawa@afn.no-ip.org>
+
+	* Nemerle.glade: "Ignore warnings" option added
+
 2004-04-26  Todd Berman  <tberman@sevenl.net>
 
 	* Base.glade: oops, missing combine->solution change
